--- a/src/common/nav/nav.styl
+++ b/src/common/nav/nav.styl
@@ -4,13 +4,14 @@
   margin-right 20px
   height 600px
   position relative
+  z-index 999
   .nav-fixed
-   position fixed
-   width 110px
-   top 10px
+    position fixed
+    width 110px
+    top 10px
   .logo
     img
-     width 100%
+      width 100%
   ul
     margin-top 15px
     li
@@ -27,7 +28,7 @@
           background-color #ed4040
           color #fff
         &.active
-         nav-active()
+          nav-active()
     .channel-more
       position relative
       .channel-more-layer
@@ -39,7 +40,7 @@
         background #fff
         z-index 999
         border-radius 5px
-        box-shadow 0 0 4px 1px rgba(0,0,0,.5)
+        box-shadow 0 0 4px 1px rgba(0, 0, 0, .5)
         ul
           margin 0
           padding 10px
